Fixed few layout bugs

--- a/web/assets/css/renterProfileSearch_style.css
+++ b/web/assets/css/renterProfileSearch_style.css
@@ -443,7 +443,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
         text-align: left;
         text-decoration: none;
         white-space: nowrap;
-        width: 40%;
+        width: 45%;
         border: 1px solid rgba(144, 144, 144, 0.2);
         margin-top: 12px;
     }
